<resources>
    <string name="app_name">AsystentTrenera-frontend</string>
    <string name="grupy">Grupy</string>
    <string name="zawodnicy">Zawodnicy</string>
    <string name="lista_obecno_i">Lista obecnośći</string>
    <string name="wiadomo_ci">Wiadomości</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">a</string>
    <string name="nazwisko">nazwisko</string>
    <string name="telefon">telefon</string>
    <string name="email">email</string>
    <string name="osoba_do_kontaktu">Osoba do kontaktu:</string>
    <string name="tak">tak</string>
    <string name="pick_time">Wybierz godzinę</string>
    <string name="pick_date">Wybierz datę</string>

    <string-array name="choose">
        <item>Do zawodnika</item>
        <item>Do grupy</item>
    </string-array>
    <string name="title_activity_physical_checkup">PhysicalCheckupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
